manifests/argocd/HTTPRoute-argocd-sfdr-me.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-sfdr-me
  namespace: network
spec:
  hostnames:
    - argocd.sfdr.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: sfdr-me
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          namespace: argocd
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
